kube/second/k8 webapp/manifests/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: web-app
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001  # Exposes on http://localhost:30001
  selector:
    app: nodejs
